# social-applications

./: Dockerfile  README.md
backend/: main.py  pyproject.toml  service.json
frontend/app/: page.tsx
